tests/errors/unicode_identifiers_e2.pyx
# -*- coding: utf-8 -*-
# mode: error

class MyClass₡: # invalid continue symbol
    pass

_ERRORS = u"""
4:13: Unrecognized character
"""
